--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-scripts": "5.0.1",
     "react-simple-typewriter": "^3.0.1",
     "react-ts-typewriter": "^0.1.8-b",
+    "semantic-ui-react": "^2.1.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
